2002-11-12  Darin Adler  <darin@apple.com>

	- improved the code that manages observing the window and superview

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView addSuperviewObservers]): Added.
        (-[WebHTMLView removeSuperviewObservers]): Added.
        (-[WebHTMLView addWindowObservers]): Added.
        (-[WebHTMLView removeWindowObservers]): Added.
        (-[WebHTMLView viewWillMoveToSuperview:]): Call removeSuperviewObservers.
        (-[WebHTMLView viewDidMoveToSuperview]): Call addSuperviewObservers.
        (-[WebHTMLView viewWillMoveToWindow:]): Call removeWindowObservers and
	removeSuperviewObservers.
        (-[WebHTMLView viewDidMoveToWindow]): Call addWindowObservers and
	addSuperviewObservers.

2002-11-11  Maciej Stachowiak  <mjs@apple.com>

	Remove contentPolicy parameter from _downloadURL, and remove
	remaining traces of path from policy object.

        * WebView.subproj/WebControllerPolicyDelegate.h:
        * WebView.subproj/WebControllerPolicyDelegate.m:
        (-[WebPolicyPrivate dealloc]):
        (+[WebURLPolicy webPolicyWithURLAction:]):
        (+[WebFileURLPolicy webPolicyWithFileAction:]):
        (+[WebContentPolicy webPolicyWithContentAction:]):
        (+[WebClickPolicy webPolicyWithClickAction:]):
        * WebView.subproj/WebControllerPolicyDelegatePrivate.h:
        * WebView.subproj/WebControllerPrivate.h:
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _downloadURL:]):
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultContextMenuDelegate downloadURL:]):
        * WebView.subproj/WebDefaultPolicyDelegate.m:
        (-[WebDefaultPolicyDelegate clickPolicyForAction:andRequest:inFrame:]):
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _continueAfterClickPolicyForEvent:request:]):
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView namesOfPromisedFilesDroppedAtDestination:]):
        * WebView.subproj/WebImageView.m: